--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,7 @@ packages = find:
 
 install_requires =
     numpy
-    mcwb
+    mcipc
 
 [options.packages.find]
 # Don't include our tests directory in the distribution
@@ -65,10 +65,10 @@ extend-ignore =
 [tool:pytest]
 # Run pytest with all our checkers, and don't spam us with massive tracebacks on error
 addopts =
-    # add --black to the following for code style checks
+    # add --black below for code style checks
     --tb=native -vv --flake8 --mypy --doctest-modules --doctest-glob="*.rst"
-    # comment the following line to enable debugging and uncomment for coverage reports
-    # --cov=mciwb --cov-report term --cov-report xml:cov.xml --ignore tests/converter
+    # comment below to enable test debugging and uncomment for coverage reports
+    --cov=mciwb --cov-report term --cov-report xml:cov.xml --ignore tests/converter
 
 [coverage:run]
 # This is covered in the versiongit test suite so exclude it here
