--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.organization=gilesknap
-sonar.projectKey=gilesknap_mcwb
+sonar.organization=mctools
+sonar.projectKey=mctools_mcwb
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
