fix sonarcloud issues

--- a/setup.cfg
+++ b/setup.cfg
@@ -68,7 +68,7 @@ addopts =
     # add --black below for code style checks
     --tb=native -vv --flake8 --mypy --doctest-modules --doctest-glob="*.rst"
     # comment below to enable test debugging and uncomment for coverage reports
-    --cov=mciwb --cov-report term --cov-report xml:cov.xml --ignore tests/converter
+    --cov=mcwb --cov-report term --cov-report xml:cov.xml --ignore tests/converter
 
 [coverage:run]
 # This is covered in the versiongit test suite so exclude it here
