--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,8 @@
-sonar.organization=mctools
-sonar.projectKey=mctools_mcwb
+sonar.projectKey=mcipc-tools_mcwb
+sonar.organization=mcipc-tools
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
 sonar.sources=.
+
+sonar.python.version=3
