--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,8 @@ packages = find:
 
 install_requires =
     numpy
-    mcipc
+    mcipc>=2.4.2
+    rcon>=2.3.6
 
 [options.packages.find]
 # Don't include our tests directory in the distribution
