--- a/.github/workflows/code.yml
+++ b/.github/workflows/code.yml
@@ -9,13 +9,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["ubuntu-latest"] # can add windows-latest, macos-latest
-        python: ["3.9"] # may add 3.10 - this project uses 3.9 features
+        os: ["ubuntu-latest"]
+        python: ["3.10"] # this project uses 3.9 features (but rcon needs 3.10)
 
         include:
-          # Tag the Python3.7 runner as the one to publish wheels
           - os: "ubuntu-latest"
-            python: "3.9"
+            python: "3.10"
             publish: true
 
     name: build/${{ matrix.python }}/${{ matrix.os }}
@@ -62,15 +61,15 @@ jobs:
   sonarcloud:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-      with:
-        # Disabling shallow clone is recommended for improving relevancy of reporting
-        fetch-depth: 0
-    - name: SonarCloud Scan
-      uses: sonarsource/sonarcloud-github-action@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - uses: actions/checkout@v2
+        with:
+          # Disabling shallow clone is recommended for improving relevancy of reporting
+          fetch-depth: 0
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   release:
     needs: [build]
