--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,12 @@ name = "mcwb"
 classifiers = [
     "Development Status :: 3 - Alpha",
     "License :: OSI Approved :: Apache Software License",
-    "Programming Language :: Python :: 3.7",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
 ]
 description = "Minecraft Interactive World Builder"
-dependencies = [] # Add project dependencies here, e.g. ["click", "numpy"]
+dependencies = ["numpy", "mcipc>=2.4.2", "rcon>=2.3.6"]
 dynamic = ["version"]
 license.file = "LICENSE"
 readme = "README.md"
@@ -45,7 +43,7 @@ mcwb = "mcwb.__main__:main"
 GitHub = "https://github.com/mcipc-tools/mcwb"
 
 [[project.authors]] # Further authors may be added by duplicating this section
-email = ""
+email = "mail@richard-neumann.de"
 name = "Richard Neumann"
 
 
