--- a/setup.cfg
+++ b/setup.cfg
@@ -10,15 +10,15 @@ long_description_content_type = text/markdown
 keywords = minecraft world builder python rcon
 classifiers =
     Development Status :: 4 - Beta
-    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.13
 
 [options]
 packages = find:
 
 install_requires =
     numpy
-    mcipc>=2.4.2
-    rcon>=2.3.6
+    mcipc
+    rcon
 
 [options.packages.find]
 # Don't include our tests directory in the distribution
@@ -27,11 +27,11 @@ exclude = tests
 [options.extras_require]
 # For development tests/docs
 dev =
-    black==21.10b0
+    black
     isort
     pytest-cov
     pytest-mypy
-    flake8<3.9.3
+    flake8
     pytest-flake8
     pytest-black
     flake8-isort
@@ -57,10 +57,15 @@ skip=setup.py,conf.py,build
 [flake8]
 # Make flake8 respect black's line length (default 88),
 max-line-length = 88
+# Note flake8's parser now breaks if you have comments on the same lines
+# See https://stackoverflow.com/questions/74558565/flake8-error-code-supplied-to-ignore-option-does-not-match-a-z1-30
 extend-ignore =
-    E203, # See https://github.com/PyCQA/pycodestyle/issues/373
-    F811, # support typing.overload decorator
-    F722, # allow Annotated[typ, some_func("some string")]
+    # See https://github.com/PyCQA/pycodestyle/issues/373
+    E203,
+    # support typing.overload decorator
+    F811,
+    # allow Annotated[typ, some_func("some string")]
+    F722,
 # exclude =
 
 [tool:pytest]
